--- a/_data/comments/demo/entry1494783990600.yml
+++ b/_data/comments/demo/entry1494783990600.yml
@@ -1,6 +1,5 @@
 _id: 43006540-38cd-11e7-9bf1-592f5cb6acda
 name: Stéphane LEROY
 email: 3f08e9320f3ab33a014ee1bc2e7fbed3
-rating: '2'
-message: Bof
+message: boff
 date: 1494783990
